--- a/raregifs/src/Components/styles/Home.module.css
+++ b/raregifs/src/Components/styles/Home.module.css
@@ -14,3 +14,11 @@
 .active {
     border: 2px solid rebeccapurple;
 }
+
+/* .video-responsive iframe{
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+} */
